hard-gists/375397bc942d134a3c82d0dd514f3fea/run.log
=== Docker Run Log for 375397bc942d134a3c82d0dd514f3fea ===
Started at: Mi 29. Okt 13:59:11 CET 2025

[2025-10-29 13:59:11] START: Running container for 375397bc942d134a3c82d0dd514f3fea
[2025-10-29 13:59:11] SUCCESS: Container 490b905dd0315398fcf12558298351315fb8d9a52a387d9e9172ee281c8b2a01 started for 375397bc942d134a3c82d0dd514f3fea
=== Container logs for 375397bc942d134a3c82d0dd514f3fea ===
  File "/snippet.py", line 24
    print 'Input sequence length range: ', max(lengths), min(lengths)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 375397bc942d134a3c82d0dd514f3fea ===
[2025-10-29 13:59:13] INFO: Container 490b905dd0315398fcf12558298351315fb8d9a52a387d9e9172ee281c8b2a01 has stopped
